Changed to use native select element

--- a/src/ui/NoteSelectWindow/index.css
+++ b/src/ui/NoteSelectWindow/index.css
@@ -2,9 +2,7 @@ body {
     width: 500px;
 }
 
-#autoComplete_wrapper {
-    height: 500px;
-    /*display: block;
-    position: absolute;
-    z-index: 100;*/
+#noteSelect {
+    width: 100%;
+    font-size: medium;
 }
