Progress in improving the UI

--- a/src/ui/DiffWindow/index.css
+++ b/src/ui/DiffWindow/index.css
@@ -21,3 +21,11 @@ body {
     padding: 5px;
     width: 98%;
 }
+
+#dialogHint {
+    font-size: medium;
+}
+
+#moveTitleButton {
+    font-size: large;
+}
