Made the UI responsive to UI changes. (#10)
* progress in making dialog responsive.

* UI IS NOW RESPONSIVE!

--- a/src/ui/DiffWindow/index.css
+++ b/src/ui/DiffWindow/index.css
@@ -1,6 +1,5 @@
-body {
-    width: 1500px;
-    height: 800px;
+#joplin-plugin-content {
+    height: 100vh;
 }
 
 h1 {
@@ -10,16 +9,30 @@ h1 {
 #titlesBar {
     display: flex;
     margin-bottom: 5px;
+    justify-content: space-between;
+}
+
+#moveTitleDiv {
+    display: flex;
+    align-items: flex-end;
+    width: 8%;
+}
+
+#moveTitleButton {
+    font-size: large;
+    height: 35px;
+    width: 100%;
 }
 
 .titleInput {
-    width: 100%;
+    width: 45%;
 }
 
 #titleLeft, #titleRight {
     font-size: large;
     padding: 5px;
-    width: 98%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #dialogTitle {
@@ -31,15 +44,7 @@ h1 {
     font-size: medium;
 }
 
-#moveTitleButton {
-    font-size: large;
-    width: 70px;
-    height: 35px;
-}
-
-#moveTitleDiv {
-    display: flex;
-    align-items: flex-end;
-    margin-right: 10px;
-    margin-left: 10px;
+#conflictRes-Editor {
+    height: 100%;
+    overflow: hidden;
 }
