Added action buttons to the editor.

--- a/src/ui/DiffWindow/index.css
+++ b/src/ui/DiffWindow/index.css
@@ -8,7 +8,7 @@ h1 {
 
 #titlesBar {
     display: flex;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     justify-content: space-between;
 }
 
@@ -47,4 +47,41 @@ h1 {
 #conflictRes-Editor {
     height: 100%;
     overflow: hidden;
+}
+
+#buttonsList {
+    margin-bottom: 5px;
+    display: flex;
+    font-size: medium;
+    justify-content: flex-end;
+    gap: 5px;
+}
+
+/* CODE FOR TOOLTIPS */
+[data-tooltip]:before {
+    /* needed - do not touch */
+    content: attr(data-tooltip);
+    position: absolute;
+    opacity: 0;
+    
+    /* customizable */
+    transition: all 0.15s ease;
+    padding: 10px;
+    color: #333;
+    border-radius: 10px;
+    box-shadow: 2px 2px 1px silver;    
+}
+
+[data-tooltip]:hover:before {
+    /* needed - do not touch */
+    opacity: 1;
+    
+    /* customizable */
+    background: gray;
+    margin-top: -50px;
+    margin-left: 0px;    
+}
+
+[data-tooltip]:not([data-tooltip-persistent]):before {
+    pointer-events: none;
 }
